c4prj2_input/grade.txt
Grading at Fri Jan  3 03:31:59 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:20:3: error: expected identifier or ‘(’ before ‘if’
   if(hand->n_cards < 5){
   ^
input.c:24:3: error: expected identifier or ‘(’ before ‘return’
   return hand;
   ^
input.c:25:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
input.c: In function ‘hand_from_string’:
input.c:19:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
